@@ -5,6 +5,7 @@ version <next>:
 - aliases and defaults for Ogg subtypes (opus, spx)
 - HEVC/H.265 RTP payload format (draft v6) packetizer and depacketizer
 - avplay now exits by default at the end of playback
+- libmfx-based QSV hwaccel1.3 and related avconv support
 
 
 version 11:
